Main Menu, GameManager and new function (change user input to move or attack) in ChessBoard